implemented camera modi reverted to old OBJ loader removed glam

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,17 +6,18 @@ set(CMAKE_CXX_STANDARD 17)
 find_package(OpenGL REQUIRED)
 find_package(GLUT REQUIRED)
 find_package(GLEW REQUIRED)
-find_package(glm REQUIRED)
 
 add_executable(Main
     src/main.cpp
-    src/help.cpp
+    src/menu.cpp
     src/texture.cpp
     src/input.cpp
     src/light.cpp
     src/window.cpp
     src/assets.cpp
     src/car.cpp
-    src/object.cpp Include/mapbox/earcut.hpp)
+    src/object.cpp
+    src/camera.cpp
+    src/vector.cpp)
 
-target_link_libraries(Main ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${GLEW_LIBRARIES} ${GLM_LIBRARIES})
+target_link_libraries(Main ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${GLEW_LIBRARIES})
